--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,9 @@
-
-
 {
   "builds": [
     {
       "src": "package.json",
-      "use": "@vercel/static-build"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
     }
   ]
 }
-
